setup second api, implements addUnicorn (POST on /unicorns)
